<?xml version="1.0" ?>
<package format="2">
    <name>ScorpioNodelet</name>
    <version>1.0.0</version>
    <description>ScorpioNodelet</description>
    <maintainer email="bangsh0718@gmail.com">Seung Hyeon Bang</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>nodelet</depend>
    <depend>roscpp</depend>
    <export>
        <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
    </export>
</package>
